[tool.poetry]
name = "askllm"
version = "0.1.0"
description = ""
authors = ["Vyoman Jain <75789232+VyoJ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
groq = "^0.11.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
